--- a/src/assets/pages/ProductDetails.scss
+++ b/src/assets/pages/ProductDetails.scss
@@ -80,6 +80,8 @@
 @media (max-width: 768px) {
     .product-details {
         padding: 10px;
+        height: 100px;
+        width: 200px;
     }
 
     .product-name {
