--- a/src/assets/components/OneProduct.scss
+++ b/src/assets/components/OneProduct.scss
@@ -50,6 +50,8 @@
     flex-direction: column;
     align-items: center;
     gap: 8px;
+    width: 260px;
+    height: 150px;
     
     p {
       margin: 0;
